practice-exam-tracker-sfdx/force-app/main/default/objects/Batch_Assignment__c/Batch_Assignment__c.object-meta.xml
<CustomObject>
    <label>Batch Assignment</label>
    <nameField>
        <displayFormat>{YY}{MM}-{0000}</displayFormat>
        <label>Batch Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>