practice-exam-tracker-sfdx/force-app/main/default/objects/Batch_Assignment__c/fields/ADM_Certified__c.field-meta.xml
<CustomField>
    <fullName>ADM_Certified__c</fullName>
    <formula>Associate__r.Admin_Certified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADM Certified</label>
    <type>Checkbox</type>
</CustomField>