practice-exam-tracker-sfdx/force-app/main/default/objects/Batch_Assignment__c/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <label>Associate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Batch Assignments</relationshipLabel>
    <relationshipName>Batch_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>