practice-exam-tracker-sfdx/force-app/main/default/objects/Batch_Assignment__c/fields/Associate_Name__c.field-meta.xml
<CustomField>
    <fullName>Associate_Name__c</fullName>
    <formula>Associate__r.FirstName + &quot; &quot; + Associate__r.LastName</formula>
    <label>Associate Name</label>
    <type>Text</type>
</CustomField>