practice-exam-tracker-sfdx/force-app/main/default/objects/Batch_Assignment__c/fields/PD1_Certified__c.field-meta.xml
<CustomField>
    <fullName>PD1_Certified__c</fullName>
    <formula>Associate__r.PD1_Certified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD1 Certified</label>
    <type>Checkbox</type>
</CustomField>